[project]
name = "compfin-assignment-1"
version = "0.1.0"
description = "Code implementation for Assignment I. of the Computational Finance course at the University of Amsterdam (2025)."
readme = "README.md"
authors = [
    { name = "MarcellSzegedi", email = "marcellvonszeged@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "typer>=0.15.2",
]

[project.scripts]
compfin = "compfin_assignment_1.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
